--- a/121_throw/121_throw.vcxproj
+++ b/121_throw/121_throw.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{70c912a9-aac8-4134-b8c4-bdaad820d1f0}</ProjectGuid>
-    <RootNamespace>My120trycatch</RootNamespace>
+    <ProjectGuid>{830b2f33-7415-4ab1-9c38-b1bf387e47ef}</ProjectGuid>
+    <RootNamespace>My121throw</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
