--- a/127_inheritance_tempalte_class/127_inheritance_tempalte_class.vcxproj
+++ b/127_inheritance_tempalte_class/127_inheritance_tempalte_class.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{70c912a9-aac8-4134-b8c4-bdaad820d1f0}</ProjectGuid>
-    <RootNamespace>My120trycatch</RootNamespace>
+    <ProjectGuid>{4982222c-994f-4470-af8f-a67b1090bd02}</ProjectGuid>
+    <RootNamespace>My127inheritancetempalteclass</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
