--- a/128_Specialization_Tempalte_class/128_Specialization_Tempalte_class.vcxproj
+++ b/128_Specialization_Tempalte_class/128_Specialization_Tempalte_class.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{70c912a9-aac8-4134-b8c4-bdaad820d1f0}</ProjectGuid>
-    <RootNamespace>My120trycatch</RootNamespace>
+    <ProjectGuid>{1bc3deaf-533b-4fa8-98b9-3bc080a2106d}</ProjectGuid>
+    <RootNamespace>My128SpecializationTempalteclass</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
